--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                     <button>3</button>
                     <button>=</button>
                 </div>
-                <div class="row">
-                    <button>0</button>
+                <div class="row zero">
+                    <button id="zero">0</button>
+                    <button>.</button>
                 </div>
             </div>
         </div>
