--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div id="main">
         <div id="panel">
-            <div id="ptop"></div>
+            <div id="ptop">
+                <div id="screen">555*55</div>
+            </div>
             <div id="pbtm">
                 <div class="row">
                     <button>AC</button>
