--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="main">
         <div id="panel">
             <div id="ptop">
-                <div id="screen">555*55</div>
+                <div id="screen">555+55</div>
             </div>
             <div id="pbtm">
                 <div class="row">
@@ -44,5 +44,6 @@
             </div>
         </div>
     </div>
+    <script src=""></script>
 </body>
 </html>
