--- a/index.html
+++ b/index.html
@@ -16,34 +16,34 @@
                 <div class="row">
                     <button>AC</button>
                     <button>←</button>
-                    <button>/</button>
-                    <button>*</button>
+                    <button class="val">/</button>
+                    <button class="val">*</button>
                 </div>
                  <div class="row">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button>-</button>
+                     <button class="val">7</button>
+                     <button class="val">8</button>
+                    <button class="val">9</button>
+                    <button class="val">-</button>
                 </div>
                 <div class="row">
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>+</button>
+                    <button class="val">4</button>
+                    <button class="val">5</button>
+                    <button class="val">6</button>
+                    <button class="val">+</button>
                 </div>
                 <div class="row">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>=</button>
+                    <button class="val">1</button>
+                    <button class="val">2</button>
+                    <button class="val">3</button>
+                    <button class="val">=</button>
                 </div>
                 <div class="row zero">
-                    <button id="zero">0</button>
-                    <button>.</button>
+                    <button class="val" id="zero">0</button>
+                    <button class="val">.</button>
                 </div>
             </div>
         </div>
     </div>
-    <script src=""></script>
+    <script src="script.js"></script>
 </body>
 </html>
