--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id="main">
         <div id="panel">
             <div id="ptop">
-                <div id="screen">555+55</div>
+                <!-- <div id="screen">555+55</div> -->
+                <input id="screen" type="number">
             </div>
             <div id="pbtm">
                 <div class="row">
