--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <div id="main">
         <div id="panel">
             <div id="ptop">
-                <!-- <div id="screen">555+55</div> -->
-                <input id="screen" type="number">
+                <h1>Calculator</h1>
+                <input id="screen" type="text">
             </div>
             <div id="pbtm">
                 <div class="row">
-                    <button>AC</button>
-                    <button>←</button>
+                    <button class="val" id="ac">AC</button>
                     <button class="val">/</button>
                     <button class="val">*</button>
                 </div>
